# tabularius

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  MAINTAINING.md  README.md  REUSE.toml  Tabularius.sln.DotSettings  Tabularius.slnx  global.json
.config/: dotnet-tools.json
.github/workflows/: main.yml  release.yml
HledgerInterop/: HledgerInterop.proj  hledger-interop.cabal  hledger-interop.def  stack.yaml
HledgerInterop/include/: verify_journal_result.h
HledgerInterop/src/: Interop.hs  Interop.hsc  Lib.hs  Tabularius.hs
HledgerInterop/test/: Spec.hs
Tabularius/: App.axaml  App.axaml.fs  AvaloniaScheduler.fs  BackgroundActivity.fs  BackgroundActivityHost.fs  Configuration.fs  ErrorCollector.fs  ExitCodes.fs  HledgerInterop.cs  IWindowService.fs  Program.fs  Svg.props  Tabularius.csproj  Tabularius.fsproj  WindowService.fs  app.manifest
Tabularius.Interop/: Hledger.cs  HledgerException.cs  HledgerInterop.cs  IHledgerApi.cs  Tabularius.Interop.csproj
Tabularius.Interop.Dto/: Tabularius.Interop.Dto.ceproj  lib.c
Tabularius.Resources/: Localization.Designer.cs  Localization.resx  Tabularius.Resources.csproj
Tabularius.Tests/: BackgroundActivityHostTests.fs  ConfigurationTests.fs  ErrorCollectorTests.fs  ErrorListViewModelTests.fs  ExceptionInfoTests.fs  InteropTests.fs  Tabularius.Tests.fsproj  Tests.fs
Tabularius.Tests/testdata/: config-with-diagnostic-mode.json  valid-config.json
Tabularius/Converters/: ErrorMessageDisplayConverter.fs  IntGreaterThanZeroConverter.fs
Tabularius/DesignTime/: HledgerDesignTimeApi.fs
Tabularius/ViewModels/: ErrorListViewModel.fs  MainViewModel.fs  MainWindowViewModel.fs  StatusViewModel.fs
Tabularius/Views/: ActivityIndicator.axaml  ActivityIndicator.axaml.fs  ErrorCounterIndicator.axaml  ErrorCounterIndicator.axaml.fs  ErrorListWindow.axaml  ErrorListWindow.axaml.fs  MainWindow.axaml  MainWindow.axaml.fs  StatusBar.axaml  StatusBar.axaml.fs
scripts/: github-actions.fsx
