cabal-version:      2.2
name:               hledger-interop
version:            0.1.0.0
build-type:         Simple
extra-source-files: hledger-interop.def
                  , include/verify_journal_result.h

-- SPDX-FileCopyrightText: 2026 Friedrich von Never <friedrich@fornever.me>
--
-- SPDX-License-Identifier: MIT

common warnings
  ghc-options:         -Wall

library
  import:              warnings
  exposed-modules:     Interop
                     , Tabularius
  hs-source-dirs:      src
  include-dirs:        include
  install-includes:    verify_journal_result.h
  build-depends:       base >=4.7 && <5
                     , hledger-lib ==1.52
  default-language:    GHC2021

test-suite hledger-interop-test
  import:              warnings
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -threaded
  build-depends:       base >=4.7 && <5
                     , directory
                     , hledger-interop
                     , hspec
  default-language:    GHC2021

foreign-library hledger-interop-shared
  import:              warnings
  type:                native-shared
  if os(windows)
    options:           standalone
    mod-def-file:      hledger-interop.def
  if os(osx)
    options:           standalone
  if os(linux)
    ghc-options:       -optl-Wl,-rpath,$ORIGIN
  other-modules:       Interop
                     , Tabularius
  hs-source-dirs:      src
  include-dirs:        include
  build-depends:       base >=4.7 && <5
                     , hledger-lib ==1.52
  default-language:    GHC2021
